# cquadpack

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
bat/: xdq4.bat  xdqage.bat  xdqagp.bat  xdqags.bat  xdqawc.bat  xdqawo.bat  xdqaws.bat  xdqc.bat  xdqi.bat  xdqng.bat  xdqtst.bat  xdqw.bat
include/: cquadpack.h  cquadpak.h
misc/: DBLINT.C  ELLTEST.C  dblint2.c
src/: cquadpak.h  dqag.c  dqage.c  dqagi.c  dqagp.c  dqags.c  dqawc.c  dqawce.c  dqawf.c  dqawfe.c  dqawo.c  dqaws.c  dqawse.c  dqc25c.c  dqc25o.c  dqc25s.c  dqcheb.c  dqext.c  dqfour.c  dqk15.c  dqk15i.c  dqk15w.c  dqk21.c  dqk31.c  dqk41.c  dqk51.c  dqk61.c  dqmomo.c  dqng.c  dqsort.c  dqwgt.c
test/: dq4tst.c  dqaget.c  dqagit.c  dqagpt.c  dqagst.c  dqagtst.c  dqawct.c  dqawft.c  dqawot.c  dqawst.c  dqct.c  dqngt.c
